@@ -1,2 +1,2 @@
-#define VERSION "20230917"
+#define VERSION "20241229"
 #define BUG_ADDRESS "issue@texjp.org"
